--- a/styles/designs.css
+++ b/styles/designs.css
@@ -1,9 +1,82 @@
-body {
+/*Background and html*/
+html, body {
+	font-family: "Times New Roman", Times, serif;
+	font-size: 14px;
+	background-image: url("../images/background1.jpg");
+	background-size: 1400px;
+	background-attachment: fixed;
+	background-position: center;
+	color: #FFFFD1;
+	margin: 0 0 0px;
 	margin: 0;
-	color: #010c89;
-	font-family: verdana, sans-serif;
-}
-header {
-	background: #ccc;
+	height: 100%;
+	line-height: 1.0;
+	position: relative;
+	width: 100%;
+	resize: both;
 	overflow: auto;
+}
+
+/*Navigation Bar*/
+.navigation {
+	float: right;
+}
+
+
+
+a.Homepage {
+
+	padding: 0px;
+	font-weight: bold;
+	font-size: 15px;
+	color: #FFFFD1;
+	position: relative;
+	top: 0px;
+	left: 0px;
+}
+
+a.Projects {
+
+	padding: 0px;
+	font-weight: bold;
+	font-size: 15px;
+	color: #FFFFD1;
+	position: relative;
+	top: 0px;
+	left: 0px;
+}
+
+a.About {
+
+	padding: 0px;
+	font-weight: bold;
+	font-size: 15px;
+	color: #FFFFD1;
+	position: relative;
+	top: 0px;
+	left: 0px;
+}
+
+a.Contact {
+
+	padding: 0px;
+	font-weight: bold;
+	font-size: 15px;
+	color: #FFFFD1;
+	position: relative;
+	top: 0px;
+	left: 0px;
+}
+
+}
+
+
+/*Footer*/
+#footer {
+	width: 100%;
+	height: 45px;
+	position: absolute;
+	top: 965px;
+	left: 0;
+	background: #4C4C4C;
 }
