--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -2,10 +2,10 @@
 html, body {
 	font-family: "Times New Roman", Times, serif;
 	font-size: 14px;
-	background-image: url("../images/background1.jpg");
-	background-size: 1400px;
+	background-image: url("../images/background.jpg");
 	background-attachment: fixed;
-	background-position: center;
+	background-position:center center;
+	background-blend-mode:darken; 
 	color: #FFFFD1;
 	margin: 0 0 0px;
 	margin: 0;
@@ -25,7 +25,11 @@ a {
 
 /*Navigation Bar*/
 .navigation {
-	float: right;
+	width: 100%;
+	height: 45px;
+	position: absolute;
+	background: #000000;
+	border-bottom:1px solid
 }
 
 
@@ -34,44 +38,43 @@ a.Homepage {
 
 	padding: 0px;
 	font-weight: bold;
-	font-size: 15px;
-	color: #FFFFD1;
+	font-size: 20px;
+	color: #FFFFFF;
 	position: relative;
-	top: 0px;
-	left: 0px;
+	left: 500px;
 }
 
 a.Projects {
 
 	padding: 0px;
 	font-weight: bold;
-	font-size: 15px;
-	color: #FFFFD1;
+	font-size: 20px;
+	color: #FFFFFF;
 	position: relative;
 	top: 0px;
-	left: 0px;
+	left: 700px;
 }
 
 a.About {
 
 	padding: 0px;
 	font-weight: bold;
-	font-size: 15px;
-	color: #FFFFD1;
+	font-size: 20px;
+	color: #FFFFFF;
 	position: relative;
 	top: 0px;
-	left: 0px;
+	left: 900px;
 }
 
 a.Contact {
 
 	padding: 0px;
 	font-weight: bold;
-	font-size: 15px;
-	color: #FFFFD1;
+	font-size: 20px;
+	color: #FFFFFF;
 	position: relative;
 	top: 0px;
-	left: 0px;
+	left: 1100px;
 }
 
 #header {
@@ -81,12 +84,14 @@ a.Contact {
 	position: absolute;
 	left: 650px;
 	top: 300px;
+	letter-spacing:2px;
+	font-weight:700;
 }
 
 /* Buttons */
 .buttons{
 	font-family: 'Roboto Slab', serif;
-	font-size: 40px;
+	font-size: 34px;
 	position: absolute;
 	left: 750px;
 	top: 500px;
@@ -96,13 +101,27 @@ a.Contact {
 a.CV{
 	color: #FFFFFF;
 	border: 4px solid white;
+	padding:20px;
 	box-sizing: border-box;
 }
+
+a.CV:hover{
+background-color: #FFFFFF;
+color:black;
+}
+
+
 
 a.Social{
 	color: #FFFFFF;
 	border: 4px solid white;
+	padding:20px;
 	box-sizing: border-box;
+}
+
+a.Social:hover{
+background-color: #FFFFFF;
+color:black;
 }
 
 
@@ -112,7 +131,8 @@ a.Social{
 	width: 100%;
 	height: 45px;
 	position: absolute;
-	top: 965px;
+	top: 915px;
 	left: 0;
-	background: #4C4C4C;
+	background: #000000;
+	border-top:1px solid
 }
