--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -4,12 +4,11 @@ body {
 	font-family: "Times New Roman", Times, serif;
 	font-size: 14px;
 	background-image: url("../images/background2.jpg");
-	color: #FFFFD1;
+	color: #FFFFFF;
 	margin: 0;
 	padding:0;
 	height: 100%;
 	overflow: hidden
-
 }
 
 header {
@@ -17,12 +16,13 @@ header {
 	font-size: 15px;
 	color: #FFFFFF;
 	position: fixed;
-	left: 130px;
+	left: 10px;
 	top:-10px;
 	letter-spacing:1px;
 	font-weight:200;
 	width: 100%;
 	height: 60px;
+
 }
 
 #footer {
@@ -33,6 +33,43 @@ header {
 	background: #333;
 	border-top:1px solid;
 }
+
+/*--Button Links--*/
+.buttons{
+	font-family: 'Roboto Slab', serif;
+	font-size: 34px;
+	position: absolute;
+	left: 80px;
+	top: 330px;
+	
+}
+
+a.CV{
+	color: #FFFFFF;
+	border: 4px solid white;
+	padding:20px;
+	box-sizing: border-box;
+}
+
+a.CV:hover{
+background-color: #FFFFFF;
+color:black;
+}
+
+
+
+a.Social{
+	color: #FFFFFF;
+	border: 4px solid white;
+	padding:20px;
+	box-sizing: border-box;
+}
+
+a.Social:hover{
+background-color: #FFFFFF;
+color:black;
+}
+
 
 /*--Start Navigation Bar--*/
 
@@ -84,7 +121,7 @@ ul.navigation li.icon {
 }
 
 /*Once the width is below 580px do the following*/
-@media screen and (max-width:580px) {
+@media screen and (max-width:480px) {
 
 /*Hide the links into the menu*/
 ul.navigation li
