--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -8,21 +8,21 @@ body {
 	margin: 0;
 	padding:0;
 	height: 100%;
-	overflow: hidden
+	overflow: hidden;
+
 }
 
 header {
 	font-family: 'Roboto Slab', serif;
 	font-size: 15px;
 	color: #FFFFFF;
-	position: fixed;
+	position: absolute;
 	left: 10px;
 	top:-10px;
 	letter-spacing:1px;
 	font-weight:200;
 	width: 100%;
 	height: 60px;
-
 }
 
 #footer {
@@ -39,36 +39,26 @@ header {
 	font-family: 'Roboto Slab', serif;
 	font-size: 34px;
 	position: absolute;
-	left: 80px;
-	top: 330px;
+	left: 20px;
+	top: 280px;
 	
 }
 
 a.CV{
 	color: #FFFFFF;
-	border: 4px solid white;
+	border: 2px solid white;
 	padding:20px;
 	box-sizing: border-box;
 }
-
-a.CV:hover{
-background-color: #FFFFFF;
-color:black;
-}
-
 
 
 a.Social{
 	color: #FFFFFF;
-	border: 4px solid white;
+	border: 2px solid white;
 	padding:20px;
 	box-sizing: border-box;
 }
 
-a.Social:hover{
-background-color: #FFFFFF;
-color:black;
-}
 
 
 /*--Start Navigation Bar--*/
