--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,4 +1,4 @@
-/*-------------------------------MOBILE-VERSION!!----------------------------------*/
+/*---------------------------------------------------------------------MOBILE-VERSION!----------------------------------------------------------------------------------*/
 
 body {
 	font-family: "Times New Roman", Times, serif;
@@ -41,14 +41,16 @@ header {
 	position: absolute;
 	left: 20px;
 	top: 280px;
-	
+	max-width: 500px;
+    min-width: 500px;
 }
 
 a.CV{
 	color: #FFFFFF;
 	border: 2px solid white;
 	padding:20px;
-	box-sizing: border-box;
+	box-sizing: border-box; 
+	
 }
 
 
@@ -57,8 +59,8 @@ a.Social{
 	border: 2px solid white;
 	padding:20px;
 	box-sizing: border-box;
-}
 
+}
 
 
 /*--Start Navigation Bar--*/
@@ -98,19 +100,16 @@ ul.navigation li a {
   text-decoration: none;
   transition: 0.3s;
   font-size: 17px;
+
 }
 
-/*Adding a hover effect*/
-ul.navigation li a:hover {
-	background-color: #555;
-}
 
 /*Menu icon is hidden when the page is over the limit specified*/
 ul.navigation li.icon {
 	display: none;
 }
 
-/*Once the width is below 480px do the following*/
+/*Whilst the width is below 480px do the following*/
 @media screen and (max-width:480px) {
 
 /*Hide the links into the menu*/
@@ -157,11 +156,15 @@ ul.navigation li
 /*--End Navigation Bar--*/
 
 
-/*-------------------------------END MOBILE-VERSION!----------------------------------*/
+/*---------------------------------------------------------------------END MOBILE-VERSION!----------------------------------------------------------------------------------*/
 
 
-/*-------------------------------IPAD/TABLET-VERSION!----------------------------------*/
-@media screen and (max-width: 950px) {
+
+
+
+
+/*---------------------------------------------------------------------IPAD/TABLET VERSION!----------------------------------------------------------------------------------*/
+@media screen and (min-width: 500px) and (max-width: 940px) {
 
 header {
 	font-family: 'Roboto Slab', serif;
@@ -182,6 +185,8 @@ header {
 	position: absolute;
 	left: 220px;
 	top: 450px;
+	max-width: 500px;
+    min-width: 500px;
 	
 }
 
@@ -192,6 +197,8 @@ ul.navigation {
   padding: 0;
   overflow: hidden;
   background-color: #333;
+  max-width: 1000px;
+  min-width: 1000px;
 }
 
 /*Arrange the items in the navigation bar (Move to the right and display inline)*/
@@ -209,25 +216,25 @@ ul.navigation li a {
   text-decoration: none;
   transition: 0.3s;
   font-size: 17px;
-
+ 
 }
 }
 
-
-/*-------------------------------END IPAD/TABLET-VERSION!----------------------------------*/
-
+/*---------------------------------------------------------------------END IPAD/TABLET-VERSION!----------------------------------------------------------------------------------*/
 
 
 
 
-/*-------------------------------GLOBAL/DESKTOP!--------------------------------------*/
+
+/*---------------------------------------------------------------------GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
+
 @media screen and (min-width: 950px) {
 /*Background and html*/
 body {
 	font-family: "Times New Roman", Times, serif;
 	font-size: 14px;
 	background-image: url("../images/background.jpg");
-	color: #FFFFD1;
+	color: #FFFFFF;
 	margin: 0;
 	padding:0;
 	height: 100%;
@@ -253,8 +260,11 @@ header {
 	position: absolute;
 	left: 750px;
 	top: 500px;
+	max-width: 500px;
+    min-width: 500px;
 	
 }
+
 
 a.CV{
 	color: #FFFFFF;
@@ -282,6 +292,20 @@ background-color: #FFFFFF;
 color:black;
 }
 
+ul.navigation {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  max-width: 2000px;
+  min-width: 2000px;
+}
+
+/*Adding a hover effect*/
+ul.navigation li a:hover {
+	background-color: #555;
+}
 
 
 /*Footer*/
@@ -297,4 +321,6 @@ color:black;
 
 }
 
+
+/*---------------------------------------------------------------------END GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
 
