--- a/styles/projects.css
+++ b/styles/projects.css
@@ -136,6 +136,30 @@ ul.navigation li
 @media screen and (min-width: 530px) and (max-width: 940px) {
 
 
+header {
+	font-family: 'Roboto Slab', serif;
+	font-size: 28px;
+	color: #FFFFFF;
+	position: absolute;
+	left: 150px;
+	top:300px;
+	letter-spacing:1px;
+	font-weight:200;
+	width: 100%;
+	height: 60px;
+}
+
+.buttons{
+	font-family: 'Roboto Slab', serif;
+	font-size: 34px;
+	position: absolute;
+	left: 220px;
+	top: 450px;
+	max-width: 500px;
+    min-width: 500px;
+	
+}
+
 /*Create the navigation bar*/
 ul.navigation {
   list-style-type: none;
@@ -187,7 +211,67 @@ ul.navigation li a {
 /*---------------------------------------------------------------------GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
 
 @media screen and (min-width: 950px) {
+/*Background and html*/
+body {
+	font-family: "Times New Roman", Times, serif;
+	font-size: 14px;
+	background-image: url("../images/background.jpg");
+	color: #FFFFFF;
+	margin: 0;
+	padding:0;
+	height: 100%;
+}
 
+header {
+	font-family: 'Roboto Slab', serif;
+	font-size: 40px;
+	color: #FFFFFF;
+	position: absolute;
+	left: 600px;
+	top: 300px;
+	letter-spacing:2px;
+	font-weight:700;
+}
+
+
+/* Buttons */
+.buttons{
+	font-family: 'Roboto Slab', serif;
+	font-size: 34px;
+	position: absolute;
+	left: 750px;
+	top: 500px;
+	max-width: 500px;
+    min-width: 500px;
+
+}
+
+
+a.CV{
+	color: #FFFFFF;
+	border: 4px solid white;
+	padding:20px;
+	box-sizing: border-box;
+}
+
+a.CV:hover{
+background-color: #FFFFFF;
+color:black;
+}
+
+
+
+a.Social{
+	color: #FFFFFF;
+	border: 4px solid white;
+	padding:20px;
+	box-sizing: border-box;
+}
+
+a.Social:hover{
+background-color: #FFFFFF;
+color:black;
+}
 
 ul.navigation {
   list-style-type: none;
