--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,9 +1,7 @@
-/*---------------------------------------------------------------------MOBILE-VERSION!----------------------------------------------------------------------------------*/
-
 body {
 	font-family: "Times New Roman", Times, serif;
 	font-size: 14px;
-	background-color: #000000;
+	background-color: #514b4b;
 	color: #FFFFFF;
 	margin: 0;
 	padding:0;
@@ -13,28 +11,14 @@ body {
 
 header {
 	font-family: 'Roboto Slab', serif;
-	font-size: 15px;
+	font-size: 40px;
 	color: #FFFFFF;
 	position: absolute;
-	left: 10px;
-	top:-10px;
-	letter-spacing:1px;
-	font-weight:200;
-	width: 100%;
-	height: 60px;
+	left: 600px;
+	top: 300px;
+	letter-spacing:2px;
+	font-weight:700;
 }
-
-#footer {
-	width: 100%;
-	height: 45px;
-	position: fixed;
-	bottom:0;
-	background: #333;
-	border-top:1px solid;
-	overflow:hidden;
-}
-
-/*--Start Navigation Bar--*/
 
 /* Remove default link settings*/
 a {
@@ -75,11 +59,81 @@ ul.navigation li a {
 
 }
 
-
 /*Menu icon is hidden when the page is over the limit specified*/
 ul.navigation li.icon {
 	display: none;
 }
+
+/*Footer set to the bottom of the page*/
+#footer {
+	width: 100%;
+	height: 45px;
+	position: fixed;
+	bottom:0;
+	background: #333;
+	border-top:1px solid;
+	overflow:hidden;
+}
+
+/*-------------------------------------------------------------------------PROJECTS------------------------------------------------------------------------------------*/
+
+
+
+/*---------LightingSystem Report-----------*/
+
+.fuzzy-flipbook .flipbook{
+	width:922px;
+	height:600px;
+	left:50px;
+	top:150px;
+}
+
+.fuzzy-flipbook .page{
+	background-size:100% 100%;
+}
+
+
+.fuzzy-flipbook .shadow{
+	-webkit-box-shadow:0 0 20px #ccc;
+	-moz-box-shadow:0 0 20px #ccc;
+	-o-box-shadow:0 0 20px #ccc;
+	-ms-box-shadow:0 0 20px #ccc;
+	box-shadow:0 0 20px #ccc;
+}
+
+/*---------Front End Report-----------*/
+
+.FE-flipbook .flipbook1{
+	width:922px;
+	height:600px;
+	left:950px;
+	top:-350px;
+}
+
+.FE-flipbook .page{
+	background-size:100% 100%;
+}
+
+
+.FE-flipbook .shadow{
+	-webkit-box-shadow:0 0 20px #ccc;
+	-moz-box-shadow:0 0 20px #ccc;
+	-o-box-shadow:0 0 20px #ccc;
+	-ms-box-shadow:0 0 20px #ccc;
+	box-shadow:0 0 20px #ccc;
+}
+
+
+/*-------------------------------------------------------------------------END PROJECTS---------------------------------------------------------------------------------*/
+
+
+
+
+
+
+
+
+/*---------------------------------------------------------------------MOBILE-VERSION!----------------------------------------------------------------------------------*/
 
 /*Whilst the width is below 480px do the following*/
 @media screen and (max-width:530px) {
@@ -123,41 +177,38 @@ ul.navigation li
     text-align: center;
   }
 
+header.LightingSystem{
+	color:#FFFFFF;
+	font-size: 10px;
+	top:300px;
+	left:30px;
 }
 
-/*--End Navigation Bar--*/
+.fuzzy-flipbook .flipbook{
+	left:-160px;
+	top:300px;
+}
 
+header.FEReport{
+	color:#FFFFFF;
+	font-size: 10px;
+	top:900px;
+	left:80px;
+}
+
+.FE-flipbook .flipbook1{
+	left:-160px;
+	top:400px;
+}
+
+
+}
 
 /*---------------------------------------------------------------------END MOBILE-VERSION!----------------------------------------------------------------------------------*/
 
 
 /*---------------------------------------------------------------------IPAD/TABLET VERSION!----------------------------------------------------------------------------------*/
 @media screen and (min-width: 530px) and (max-width: 940px) {
-
-
-header {
-	font-family: 'Roboto Slab', serif;
-	font-size: 28px;
-	color: #FFFFFF;
-	position: absolute;
-	left: 150px;
-	top:300px;
-	letter-spacing:1px;
-	font-weight:200;
-	width: 100%;
-	height: 60px;
-}
-
-.buttons{
-	font-family: 'Roboto Slab', serif;
-	font-size: 34px;
-	position: absolute;
-	left: 220px;
-	top: 450px;
-	max-width: 500px;
-    min-width: 500px;
-	
-}
 
 /*Create the navigation bar*/
 ul.navigation {
@@ -188,16 +239,26 @@ ul.navigation li a {
  
 }
 
-#footer {
-	width: 130%;
-	height: 45px;
-	position: fixed;
-	bottom:0;
-	background: #333;
-	border-top:1px solid;
-	overflow:hidden;
+header.LightingSystem{
+	color:#FFFFFF;
+	font-size: 16px;
+	top:100px;
+	left:150px;
 }
 
+header.FEReport{
+	color:#FFFFFF;
+	font-size: 16px;
+	top:750px;
+	left:240px;
+}
+
+.FE-flipbook .flipbook1{
+	width:922px;
+	height:600px;
+	left:60px;
+	top:350px;
+}
 
 }
 
@@ -205,72 +266,22 @@ ul.navigation li a {
 
 
 
-
-
 /*---------------------------------------------------------------------GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
 
 @media screen and (min-width: 950px) {
-/*Background and html*/
-body {
-	font-family: "Times New Roman", Times, serif;
-	font-size: 14px;
-	background-color: #514b4b;
-	color: #FFFFFF;
-	margin: 0;
-	padding:0;
-	height: 100%;
-	overflow-x: hidden;
+
+header.LightingSystem{
+	color:#FFFFFF;
+	font-size: 18px;
+	top:100px;
+	left:150px;
 }
 
-header {
-	font-family: 'Roboto Slab', serif;
-	font-size: 40px;
-	color: #FFFFFF;
-	position: absolute;
-	left: 600px;
-	top: 300px;
-	letter-spacing:2px;
-	font-weight:700;
-}
-
-
-/* Buttons */
-.buttons{
-	font-family: 'Roboto Slab', serif;
-	font-size: 34px;
-	position: absolute;
-	left: 750px;
-	top: 500px;
-	max-width: 500px;
-    min-width: 500px;
-
-}
-
-
-a.CV{
-	color: #FFFFFF;
-	border: 4px solid white;
-	padding:20px;
-	box-sizing: border-box;
-}
-
-a.CV:hover{
-background-color: #FFFFFF;
-color:black;
-}
-
-
-
-a.Social{
-	color: #FFFFFF;
-	border: 4px solid white;
-	padding:20px;
-	box-sizing: border-box;
-}
-
-a.Social:hover{
-background-color: #FFFFFF;
-color:black;
+header.FEReport{
+	color:#FFFFFF;
+	font-size: 18px;
+	top:100px;
+	left:1100px;
 }
 
 ul.navigation {
@@ -288,83 +299,8 @@ ul.navigation li a:hover {
 	background-color: #555;
 }
 
-
-/*Footer*/
-#footer {
-	width: 100%;
-	height: 45px;
-	bottom:0;
-	background: #333;
-	border-top:1px solid;
-	position: fixed;
-	overflow: hidden;
-}
-
 }
 
 /*---------------------------------------------------------------------END GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
 
 
-/*-------------------------------------------------------------------------PROJECTS--------------------------------------------------------------------------------------------------*/
-
-header.LightingSystem{
-	color:#FFFFFF;
-	font-size: 18px;
-	top:100px;
-	left:150px;
-}
-
-header.FEReport{
-	color:#FFFFFF;
-	font-size: 18px;
-	top:100px;
-	left:1100px;
-}
-
-/*---------LightingSystem Report-----------*/
-
-
-
-
-.fuzzy-flipbook .flipbook{
-	width:922px;
-	height:600px;
-	left:50px;
-	top:150px;
-}
-
-.fuzzy-flipbook .page{
-	background-size:100% 100%;
-}
-
-
-.fuzzy-flipbook .shadow{
-	-webkit-box-shadow:0 0 20px #ccc;
-	-moz-box-shadow:0 0 20px #ccc;
-	-o-box-shadow:0 0 20px #ccc;
-	-ms-box-shadow:0 0 20px #ccc;
-	box-shadow:0 0 20px #ccc;
-}
-
-/*---------Front End Report-----------*/
-
-
-.FE-flipbook .flipbook1{
-	width:922px;
-	height:600px;
-	left:950px;
-	top:-350px;
-}
-
-.FE-flipbook .page{
-	background-size:100% 100%;
-}
-
-
-.FE-flipbook .shadow{
-	-webkit-box-shadow:0 0 20px #ccc;
-	-moz-box-shadow:0 0 20px #ccc;
-	-o-box-shadow:0 0 20px #ccc;
-	-ms-box-shadow:0 0 20px #ccc;
-	box-shadow:0 0 20px #ccc;
-}
