--- a/styles/projects.css
+++ b/styles/projects.css
@@ -16,12 +16,13 @@ header {
 }
 
 footer{
+	position: fixed;
 	width: 100%;
 	height: 45px;
-	bottom:0;
 	background: #333;
 	border-top:1px solid;
 	overflow:hidden;
+	bottom: 0px;
 }
 
 
@@ -79,7 +80,7 @@ ul.navigation li.icon {
 /*---------LightingSystem Report-----------*/
 
 .fuzzy-flipbook .flipbook{
-	left:-20px;
+	left:100px;
 	top:150px;
 }
 
@@ -99,7 +100,7 @@ ul.navigation li.icon {
 /*---------Front End Report-----------*/
 
 .FE-flipbook .flipbook1{
-	left:850px;
+	left:1000px;
 	top:-350px;
 }
 
@@ -299,14 +300,14 @@ header.LightingSystem{
 	color:#FFFFFF;
 	font-size: 18px;
 	top:100px;
-	left:200px;
+	left:150px;
 }
 
 header.FEReport{
 	color:#FFFFFF;
 	font-size: 18px;
 	top:100px;
-	left:1150px;
+	left:1100px;
 }
 
 
